src/objects/Mercury_Settings_MERC__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>Custom Settings for the Mercury Project mostly related to the operation of the Customer Search Tool, Veeva integration, Budget and Invoice processing.</description>
    <fields>
        <fullName>Budget_Edit_Validation_MERC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When checked, active/archived budgets cannot be modified.</description>
        <inlineHelpText>When checked, active/archived budgets cannot be modified.</inlineHelpText>
        <label>Budget Edit Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CST_Client_Id_MERC__c</fullName>
        <description>The Client ID for the CST search service</description>
        <inlineHelpText>The Client ID for the CST search service</inlineHelpText>
        <label>CST Client Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Client_Secret_MERC__c</fullName>
        <description>The Client secret for the CST search service</description>
        <inlineHelpText>The Client secret for the CST search service</inlineHelpText>
        <label>CST Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Expire_Cron_Id_CUST__c</fullName>
        <description>Id of the last initiated schedule of expire batch jobs</description>
        <inlineHelpText>Id of the last initiated schedule of expire batch jobs</inlineHelpText>
        <label>Id of Latest CST Expire Cron Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Expire_Cron_Name_CUST__c</fullName>
        <description>Name of programatically scheduled batch job to expire old authorizations</description>
        <inlineHelpText>Name of programatically scheduled batch job to expire old authorizations</inlineHelpText>
        <label>Name of CST Expire Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Expire_Cron_Sched_CUST__c</fullName>
        <description>Cron expression setting the schedule of expire batch jobs</description>
        <inlineHelpText>Cron expression setting the schedule of expire batch jobs</inlineHelpText>
        <label>Schedule of CST Expire Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Notify_Cron_Id_CUST__c</fullName>
        <description>Id of the last initiated schedule of soon-to-expire batch jobs</description>
        <inlineHelpText>Id of the last initiated schedule of soon-to-expire batch jobs</inlineHelpText>
        <label>Id of Latest CST Notify Cron Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Notify_Cron_Name_CUST__c</fullName>
        <description>Name of programatically scheduled batch job to notify parties of soon-to-expire authorizations</description>
        <inlineHelpText>Name of programatically scheduled batch job to notify parties of soon-to-expire authorizations</inlineHelpText>
        <label>Name of CST Notify Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Notify_Cron_Sched_CUST__c</fullName>
        <description>Cron expression setting the schedule of soon-to-expire batch jobs</description>
        <inlineHelpText>Cron expression setting the schedule of soon-to-expire batch jobs</inlineHelpText>
        <label>Schedule of CST Notify Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Review_Cron_Id_CUST__c</fullName>
        <description>Id of the last initiated schedule of Under Review batch jobs</description>
        <inlineHelpText>Id of the last initiated schedule of Under Review batch jobs</inlineHelpText>
        <label>Id of Latest CST &quot;Under Review&quot; Cron Job</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Review_Cron_Name_CUST__c</fullName>
        <description>Name of programatically scheduled batch job to set requests to Under Review</description>
        <inlineHelpText>Name of programatically scheduled batch job to set requests to Under Review</inlineHelpText>
        <label>Name of CST &quot;Under Review&quot; Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_Review_Cron_Sched_CUST__c</fullName>
        <description>Cron expression setting the schedule of Under Review batch jobs</description>
        <inlineHelpText>Cron expression setting the schedule of Under Review batch jobs</inlineHelpText>
        <label>Schedule of CST &quot;Under Review&quot; Cron Job</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CST_URL_GLBL__c</fullName>
        <description>The URL where the Customer Search Tool API is serviced. Used by GLBL_CustomerSearchToolService.cls.</description>
        <inlineHelpText>The URL where the Customer Search Tool API is serviced. Used by GLBL_CustomerSearchToolService.cls.</inlineHelpText>
        <label>CST URL</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_File_Prefix_MERC__c</fullName>
        <defaultValue>&quot;MercuryInvoice-&quot;</defaultValue>
        <description>Determines the prefix of file names sent for processing. This value is expected &amp; used by the Informatica &amp; SAP integrations.</description>
        <inlineHelpText>Determines the prefix of file names sent for processing. Used by the Informatica &amp; SAP integrations.</inlineHelpText>
        <label>Invoice File Prefix</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MVI_Service_Endpoint_MERC__c</fullName>
        <description>The endpoint for the MVI Service</description>
        <inlineHelpText>The endpoint for the MVI Service</inlineHelpText>
        <label>MVI Service Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Meeting_Participant_Report_Id_MERC__c</fullName>
        <description>Used for custom link on Meeting</description>
        <inlineHelpText>Used for custom link on Meeting</inlineHelpText>
        <label>Meeting Participant Report Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Mercury Settings</label>
</CustomObject>